first part of application client security.

--- a/rateclient/src/app/app.component.html
+++ b/rateclient/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>
   {{title}}
 </h1>
+<div>
+  <button (click)="test()">
+    Test
+  </button>
+</div>
+<main role="main" class="container">
+
+</main>
