--- a/rateclient/src/app/sidenav/sidenav.component.html
+++ b/rateclient/src/app/sidenav/sidenav.component.html
@@ -9,7 +9,7 @@
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="#">My Loan</a>
-      <a mat-list-item href="#">BNR Rates</a>
+      <a mat-list-item routerLink="/rates" routerLinkActive="active">BNR Rates</a>
       <a mat-list-item (click)="logout()">Logout</a>
     </mat-nav-list>
   </mat-sidenav>
@@ -27,5 +27,6 @@
       <span class="example-fill-remaining-space"></span>
       <span>{{(useProfile$ | async)?.email}}</span>
     </mat-toolbar>
+  <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
