--- a/rateclient/src/app/sidenav/sidenav.component.html
+++ b/rateclient/src/app/sidenav/sidenav.component.html
@@ -8,8 +8,8 @@
     [opened]="!(isHandset$ | async)">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">My Loan</a>
-      <a mat-list-item routerLink="/rates" routerLinkActive="active">BNR Rates</a>
+      <a mat-list-item [routerLink]="['/loan']" routerLinkActive="router-link-active" >My Loans</a>
+      <a mat-list-item [routerLink]="['/rates']" routerLinkActive="router-link-active"  >BNR Rates</a>
       <a mat-list-item (click)="logout()">Logout</a>
     </mat-nav-list>
   </mat-sidenav>
