--- a/rateclient/src/app/loaneditor/loaneditor.component.html
+++ b/rateclient/src/app/loaneditor/loaneditor.component.html
@@ -16,16 +16,26 @@
       <input matInput placeholder="Name" required>
     </mat-form-field>
 
-    <mat-form-field>
-        <input matInput [matDatepicker]="picker" placeholder="Choose loan transaction date">
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
+<div>
+    <mat-form-field style="padding-right:1rem">
+        <input matInput [matDatepicker]="dtpLoanTransaction" placeholder="Choose loan transaction date">
+        <mat-datepicker-toggle matSuffix [for]="dtpLoanTransaction"></mat-datepicker-toggle>
+        <mat-datepicker #dtpLoanTransaction></mat-datepicker>
       </mat-form-field>
+      <mat-form-field [floatLabel]="options.value.floatLabel" style="padding-right:1rem">
+          <input matInput placeholder="No. of months">
+        </mat-form-field>
+      <mat-form-field>
+          <input matInput [matDatepicker]="dtpLoanEnd" placeholder="Choose loan end date">
+          <mat-datepicker-toggle matSuffix [for]="dtpLoanEnd"></mat-datepicker-toggle>
+          <mat-datepicker #dtpLoanEnd></mat-datepicker>
+        </mat-form-field>
+</div>
 
 
-    <mat-form-field [floatLabel]="options.value.floatLabel">
-      <input matInput placeholder="No. of months">
-    </mat-form-field>
+
+
+
 
 
 
