--- a/rateclient/src/app/loan/loan.component.html
+++ b/rateclient/src/app/loan/loan.component.html
@@ -4,15 +4,15 @@
       </button>
   <table mat-table #table [dataSource]="dataSource" matSort aria-label="Elements">
     <!-- Id Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+    <ng-container matColumnDef="rateofDatePayment">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Rate Date of Payment</th>
+      <td mat-cell *matCellDef="let row">{{row.rateofDatePayment}}</td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+    <ng-container matColumnDef="bankRate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Bank Rate</th>
+      <td mat-cell *matCellDef="let row">{{row.bankRate}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
